[project]
name = "rt-toolbox"
version = "0.1.0"
description = "This project contains an implementation of useful tools for The Runtime Monitor constalltion. The rationale behind this tools is that they play the role the extremities of The Runtime Monitor connected through RabbitMQ exchanges."
authors = [
  {name = "Carlos Gustavo Lopez Pombo", email = "clpombo@gmail.com"}
]
license = "SPDX-License-Identifier: AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11,<4.0"
packages = [
    { include = "rt_toolbox"},
]
dependencies = [
    "pika (~=1.3.2)",
    "pika-stubs (~=0.1.3)",
    "pip (~=25.1.1)",
    "poetry-core (~=2.1.3)",
    "rt-rabbitmq-wrapper @ git+https://github.com/invap/rt-rabbitmq-wrapper.git#develop"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
