[project]
name = "rt-toolbox"
version = "2.8.1"
description = "This project contains an implementation of useful tools for The Runtime Monitor constalltion. The rationale behind this tools is that they play the role the extremities of The Runtime Monitor connected through RabbitMQ exchanges."
authors = [
  {name = "Carlos Gustavo Lopez Pombo", email = "clpombo@gmail.com"}
]
license = "SPDX-License-Identifier: AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11,<4.0"
packages = [
    { include = "rt_toolbox"},
]
dependencies = [
    "pika (~=1.3.2)",
    "pika-stubs (~=0.1.3)",
    "pip (~=25.1.1)",
    "poetry-core (~=2.1.3)",
    "wxpython (>=4.2.2,<4.3.0); sys_platform == 'darwin'",
    "wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "rt-rabbitmq-wrapper @ git+https://github.com/invap/rt-rabbitmq-wrapper.git@v2.0.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
