[project]
name = "rt-toolbox"
version = "2.8.1"
description = "This project contains an implementation of useful tools for The Runtime Monitor constalltion. The rationale behind this tools is that they play the role the extremities of The Runtime Monitor connected through RabbitMQ exchanges."
authors = [
  {name = "Carlos Gustavo Lopez Pombo", email = "clpombo@gmail.com"}
]
license = "SPDX-License-Identifier: AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<3.14"
packages = [
    { include = "rt_toolbox"},
]
dependencies = [
    "pika (~=1.3.2)",
    "rt-rabbitmq-wrapper @ git+https://github.com/invap/rt-rabbitmq-wrapper.git@v2.0.1"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytomlcleaner (>=1.0.0,<2.0.0)"
]
